# src/model/sideBar.js
@@ -1,0 +1,517 @@
+const sideBar  = [
+  {
+    "featuresId": "208d082f-2883-47ff-9432-7315394a84da",
+    "code": "default",
+    "name": "首頁",
+    "url": "",
+    "icon": "ant-design:home-outlined",
+    "parentId": null,
+    "sort": 0,
+    "subMenu": [
+      {
+        "featuresId": "fb0d505e-a340-4808-b073-0579fb41651b",
+        "code": "home",
+        "name": "歡迎頁面",
+        "url": "/",
+        "featuresType": 0,
+        "icon": "",
+        "parentId": "208d082f-2883-47ff-9432-7315394a84da",
+        "sort": 0,
+        "subMenu": []
+      },
+      {
+        "featuresId": "89d01a7e-3ea2-4476-95dd-8a7f09e1d9f1",
+        "code": "dashboard",
+        "name": "儀表板",
+        "url": "/dashBoard",
+        "featuresType": 0,
+        "icon": "",
+        "parentId": "208d082f-2883-47ff-9432-7315394a84da",
+        "sort": 0,
+        "subMenu": []
+      },
+      {
+        "featuresId": "a664a1e2-2a9d-44e8-b0b8-9e233c232834",
+        "code": "login",
+        "name": "登入頁面",
+        "url": "/login",
+        "featuresType": 0,
+        "icon": "",
+        "parentId": "208d082f-2883-47ff-9432-7315394a84da",
+        "sort": 0,
+        "subMenu": []
+      }
+    ]
+  },
+  {
+    "featuresId": "2bab9ddb-3387-4c97-b563-960e93cc2c7a",
+    "code": "manager",
+    "name": "管理者帳號",
+    "url": "",
+    "icon": "fa-users",
+    "parentId": null,
+    "sort": 1,
+    "subMenu": [
+      {
+        "featuresId": "0ae9596b-717a-4427-9a39-669410cdee45",
+        "code": "account",
+        "name": "子帳號列表",
+        "url": "/agent/account",
+        "featuresType": 0,
+        "icon": "",
+        "parentId": "2bab9ddb-3387-4c97-b563-960e93cc2c7a",
+        "sort": 0,
+        "subMenu": []
+      }
+    ]
+  },
+  {
+    "featuresId": "ade9d09a-4f36-49bb-8f72-fcadae36a8fe",
+    "code": "member",
+    "name": "會員管理",
+    "url": "",
+    "icon": "fa-user",
+    "parentId": null,
+    "sort": 2,
+    "subMenu": [
+      {
+        "featuresId": "6901eb43-d68f-4ead-ac26-8d1038315660",
+        "code": "memberList",
+        "name": "會員列表",
+        "url": "/member/index",
+        "featuresType": 0,
+        "icon": "",
+        "parentId": "ade9d09a-4f36-49bb-8f72-fcadae36a8fe",
+        "sort": 0,
+        "subMenu": []
+      },
+      {
+        "featuresId": "440835a2-e985-4c42-818e-dad188ca73d2",
+        "code": "memberLoginLog",
+        "name": "會員登入紀錄",
+        "url": "/member/LoginLog",
+        "featuresType": 0,
+        "icon": "",
+        "parentId": "ade9d09a-4f36-49bb-8f72-fcadae36a8fe",
+        "sort": 1,
+        "subMenu": []
+      },
+      {
+        "featuresId": "cb77a607-a457-4ff1-ac1a-09baca82bc92",
+        "code": "memberTransactionLog",
+        "name": "轉入/轉出紀錄",
+        "url": "/member/TransactionLog",
+        "featuresType": 0,
+        "icon": "",
+        "parentId": "ade9d09a-4f36-49bb-8f72-fcadae36a8fe",
+        "sort": 2,
+        "subMenu": []
+      },
+      {
+        "featuresId": "6cf6f5ef-0ca2-4086-8875-4555ee918c4e",
+        "code": "memberOpenWashPointLog",
+        "name": "開分/洗分紀錄",
+        "url": "/member/OpenWashPointLog",
+        "featuresType": 0,
+        "icon": "",
+        "parentId": "ade9d09a-4f36-49bb-8f72-fcadae36a8fe",
+        "sort": 3,
+        "subMenu": []
+      },
+      {
+        "featuresId": "80374c49-36c2-429b-ad44-a1a63f3a964a",
+        "code": "singleWalletFailLog",
+        "name": "單一錢包失敗紀錄",
+        "url": "/SingleWalletFailLog/Index",
+        "featuresType": 0,
+        "icon": "",
+        "parentId": "ade9d09a-4f36-49bb-8f72-fcadae36a8fe",
+        "sort": 5,
+        "subMenu": []
+      }
+    ]
+  },
+  {
+    "featuresId": "51f30eba-4f60-4bb5-ac15-ed89756dea48",
+    "code": "report",
+    "name": "統計報表",
+    "url": "",
+
+    "icon": "fa-list-alt",
+    "parentId": null,
+    "sort": 3,
+
+    "subMenu": [
+      {
+        "featuresId": "a903fe9c-e7a9-4e0d-95c3-0b4f1ec4dc6c",
+        "code": "betRecord",
+        "name": "輸贏報表",
+        "url": "/betRecord/index",
+        "featuresType": 0,
+        "icon": "",
+        "parentId": "51f30eba-4f60-4bb5-ac15-ed89756dea48",
+        "sort": 0,
+        "subMenu": []
+      },
+      {
+        "featuresId": "c7536ade-e83c-46a5-9886-085989e77c3a",
+        "code": "betList",
+        "name": "注單明細報表",
+        "url": "/betList/index",
+        "featuresType": 0,
+        "icon": "",
+        "parentId": "51f30eba-4f60-4bb5-ac15-ed89756dea48",
+        "sort": 1,
+        "subMenu": []
+      },
+      {
+        "featuresId": "3abea47a-bd36-4351-b402-b43f6750bd63",
+        "code": "betGameRecord",
+        "name": "遊戲報表",
+        "url": "/betGameRecord/index",
+        "featuresType": 0,
+        "icon": "",
+        "parentId": "51f30eba-4f60-4bb5-ac15-ed89756dea48",
+        "sort": 2,
+        "subMenu": []
+      },
+      {
+        "featuresId": "97453dc3-da11-4830-bb1a-cddcd58dd2de",
+        "code": "openRecord",
+        "name": "開牌紀錄",
+        "url": "",
+
+        "icon": "",
+        "parentId": "51f30eba-4f60-4bb5-ac15-ed89756dea48",
+        "sort": 3,
+        "subMenu": [
+          {
+            "featuresId": "13603af5-ef69-47a6-b792-65880a34a58c",
+            "code": "bacc",
+            "name": "百家樂",
+            "url": "/gameResult/bacc",
+            "featuresType": 0,
+            "icon": "",
+            "parentId": "97453dc3-da11-4830-bb1a-cddcd58dd2de",
+            "sort": 0,
+            "subMenu": []
+          },
+          {
+            "featuresId": "203e27a3-b138-4d6f-8e21-29b53f912654",
+            "code": "longHu",
+            "name": "龍虎",
+            "url": "/gameResult/longHu",
+            "featuresType": 0,
+            "icon": "",
+            "parentId": "97453dc3-da11-4830-bb1a-cddcd58dd2de",
+            "sort": 1,
+            "subMenu": []
+          },
+          {
+            "featuresId": "54b61b98-dbd3-4373-a4ce-0bd9f8ac86c9",
+            "code": "lunPan",
+            "name": "輪盤",
+            "url": "/gameResult/lunPan",
+            "featuresType": 0,
+            "icon": "",
+            "parentId": "97453dc3-da11-4830-bb1a-cddcd58dd2de",
+            "sort": 2,
+            "subMenu": []
+          },
+          {
+            "featuresId": "41289be5-695a-407b-9286-3a886b5c1e1c",
+            "code": "shaiZi",
+            "name": "骰寶",
+            "url": "/gameResult/shaiZi",
+            "featuresType": 0,
+            "icon": "",
+            "parentId": "97453dc3-da11-4830-bb1a-cddcd58dd2de",
+            "sort": 3,
+            "subMenu": []
+          },
+          {
+            "featuresId": "f43883c2-482f-49bf-989d-64af478eb743",
+            "code": "fanTan",
+            "name": "番攤",
+            "url": "/gameResult/fanTan",
+            "featuresType": 0,
+            "icon": "",
+            "parentId": "97453dc3-da11-4830-bb1a-cddcd58dd2de",
+            "sort": 4,
+            "subMenu": []
+          },
+          {
+            "featuresId": "a4035283-8286-4bf4-b800-2ab84875b6d6",
+            "code": "pokDeng",
+            "name": "博丁",
+            "url": "/gameResult/pokDeng",
+            "featuresType": 0,
+            "icon": "",
+            "parentId": "97453dc3-da11-4830-bb1a-cddcd58dd2de",
+            "sort": 6,
+            "subMenu": []
+          },
+          {
+            "featuresId": "6850cc13-ff4e-43d9-b8f6-a77b1b287e94",
+            "code": "bCBacc",
+            "name": "區塊鏈百家樂",
+            "url": "/gameResult/bCBacc",
+            "featuresType": 0,
+            "icon": "",
+            "parentId": "97453dc3-da11-4830-bb1a-cddcd58dd2de",
+            "sort": 10,
+            "subMenu": []
+          },
+          {
+            "featuresId": "47f2e85b-6cf5-4dd7-ab0d-6d7b6308c5be",
+            "code": "bCLongHu",
+            "name": "區塊鏈龍虎",
+            "url": "/gameResult/bCLongHu",
+            "featuresType": 0,
+            "icon": "",
+            "parentId": "97453dc3-da11-4830-bb1a-cddcd58dd2de",
+            "sort": 11,
+            "subMenu": []
+          },
+          {
+            "featuresId": "dae024f0-85cc-4f2a-8989-0620530eec5c",
+            "code": "hiLo",
+            "name": "泰國骰",
+            "url": "/gameResult/hiLo",
+            "featuresType": 0,
+            "icon": "",
+            "parentId": "97453dc3-da11-4830-bb1a-cddcd58dd2de",
+            "sort": 14,
+            "subMenu": []
+          },
+          {
+            "featuresId": "d3330994-1ecf-4f49-9b4a-29d8890d833d",
+            "code": "BCSDD",
+            "name": "區塊鏈射龍門",
+            "url": "/gameResult/bcSdd",
+            "featuresType": 0,
+            "icon": "",
+            "parentId": "97453dc3-da11-4830-bb1a-cddcd58dd2de",
+            "sort": 15,
+            "subMenu": []
+          }
+        ]
+      },
+      {
+        "featuresId": "9e121bbe-10c2-4af8-a681-f14738e718d6",
+        "code": "changeRecords",
+        "name": "改牌紀錄",
+        "url": "/changeRecords/index",
+        "featuresType": 0,
+        "icon": "",
+        "parentId": "51f30eba-4f60-4bb5-ac15-ed89756dea48",
+        "sort": 4,
+        "subMenu": []
+      },
+      {
+        "featuresId": "2f23b23f-c1a3-2c23-ace3-3cb412b66ab3",
+        "code": "OnlinePlayerSampling",
+        "name": "玩家在線抽樣統計",
+        "url": "backend/OnlinePlayerSampling/index",
+        "featuresType": 0,
+        "icon": "",
+        "parentId": "51f30eba-4f60-4bb5-ac15-ed89756dea48",
+        "sort": 5,
+        "subMenu": []
+      },
+      {
+        "featuresId": "39e70b72-d8f4-4057-8050-9e8f60f13e4f",
+        "code": "against",
+        "name": "注區對押分析",
+        "url": "",
+
+        "icon": "",
+        "parentId": "51f30eba-4f60-4bb5-ac15-ed89756dea48",
+        "sort": 6,
+
+        "subMenu": [
+          {
+            "featuresId": "67af805f-ebea-4c27-9119-0bb506cbfba9",
+            "code": "baccAgainst",
+            "name": "百家樂",
+            "url": "against/BaccAgainst/Index",
+            "featuresType": 0,
+            "icon": "",
+            "parentId": "39e70b72-d8f4-4057-8050-9e8f60f13e4f",
+            "sort": 0,
+            "subMenu": []
+          },
+          {
+            "featuresId": "5f51ccc2-0086-4ad2-9c12-2402ec129583",
+            "code": "longHuAgainst",
+            "name": "龍虎",
+            "url": "against/LongHuAgainst/Index",
+            "featuresType": 0,
+            "icon": "",
+            "parentId": "39e70b72-d8f4-4057-8050-9e8f60f13e4f",
+            "sort": 1,
+            "subMenu": []
+          },
+          {
+            "featuresId": "3d3eb68c-8ba7-46f6-bb4f-5dba20918325",
+            "code": "lunPanAgainst",
+            "name": "輪盤",
+            "url": "against/LunPanAgainst/Index",
+            "featuresType": 0,
+            "icon": "",
+            "parentId": "39e70b72-d8f4-4057-8050-9e8f60f13e4f",
+            "sort": 2,
+            "subMenu": []
+          },
+          {
+            "featuresId": "66722096-bc05-4b69-b5c3-bfcff7202639",
+            "code": "shaiZiAgainst",
+            "name": "骰寶",
+            "url": "against/ShaiZiAgainst/Index",
+            "featuresType": 0,
+            "icon": "",
+            "parentId": "39e70b72-d8f4-4057-8050-9e8f60f13e4f",
+            "sort": 3,
+            "subMenu": []
+          },
+          {
+            "featuresId": "1200b8ae-e145-4d8e-a128-81179551f123",
+            "code": "fanTanAgainst",
+            "name": "番攤",
+            "url": "against/FanTanAgainst/Index",
+            "featuresType": 0,
+            "icon": "",
+            "parentId": "39e70b72-d8f4-4057-8050-9e8f60f13e4f",
+            "sort": 4,
+            "subMenu": []
+          },
+          {
+            "featuresId": "9f52d720-8283-479a-b142-e80b938eb3e2",
+            "code": "pokDengAgainst",
+            "name": "博丁",
+            "url": "against/PokDengAgainst/Index",
+            "featuresType": 0,
+            "icon": "",
+            "parentId": "39e70b72-d8f4-4057-8050-9e8f60f13e4f",
+            "sort": 6,
+            "subMenu": []
+          },
+          {
+            "featuresId": "5bcfcc4b-744c-46ed-a69b-4c1aa62284b2",
+            "code": "bcBaccAgainst",
+            "name": "區塊鏈百家樂",
+            "url": "against/BcBaccAgainst/Index",
+            "featuresType": 0,
+            "icon": "",
+            "parentId": "39e70b72-d8f4-4057-8050-9e8f60f13e4f",
+            "sort": 10,
+            "subMenu": []
+          },
+          {
+            "featuresId": "c631bcd8-8094-456d-b01c-b09c1d9ab7d7",
+            "code": "bCLongHuAgainst",
+            "name": "區塊鏈龍虎",
+            "url": "against/BCLongHuAgainst/Index",
+            "featuresType": 0,
+            "icon": "",
+            "parentId": "39e70b72-d8f4-4057-8050-9e8f60f13e4f",
+            "sort": 11,
+            "subMenu": []
+          },
+          {
+            "featuresId": "cc21fde0-8f1f-4131-b4b7-875869b91702",
+            "code": "hiLoAgainst",
+            "name": "泰國骰",
+            "url": "against/hiLoAgainst/Index",
+            "featuresType": 0,
+            "icon": "",
+            "parentId": "39e70b72-d8f4-4057-8050-9e8f60f13e4f",
+            "sort": 14,
+            "subMenu": []
+          }
+        ]
+      }
+    ]
+  },
+  {
+    "featuresId": "c3fd5ca8-3e0d-4d71-9633-930c757f9668",
+    "code": "agent",
+    "name": "所屬站台",
+    "url": "",
+    "icon": "fa-sitemap",
+    "parentId": null,
+    "sort": 4,
+
+    "subMenu": [
+      {
+        "featuresId": "7a323919-5dc8-4e10-8623-161ed1bfa0bb",
+        "code": "sysManager",
+        "name": "系統管理",
+        "url": "/systemCode/index",
+        "featuresType": 0,
+        "icon": "",
+        "parentId": "c3fd5ca8-3e0d-4d71-9633-930c757f9668",
+        "sort": 0,
+        "subMenu": []
+      },
+      {
+        "featuresId": "f715b117-315a-4768-9ec9-744da2ea7adb",
+        "code": "webIdManager",
+        "name": "站台管理",
+        "url": "/webId/index",
+        "featuresType": 0,
+        "icon": "",
+        "parentId": "c3fd5ca8-3e0d-4d71-9633-930c757f9668",
+        "sort": 1,
+        "subMenu": []
+      }
+    ]
+  },
+  {
+    "featuresId": "9a3a1c52-a211-4a4b-85b1-eabae8f707c3",
+    "code": "tools",
+    "name": "工具",
+    "url": "",
+    "icon": "fa-cogs",
+    "parentId": null,
+    "sort": 5,
+    "subMenu": [
+      {
+        "featuresId": "32f9cc59-f44e-4bfa-9e58-7c536c4c4cc6",
+        "code": "news",
+        "name": "公告管理",
+        "url": "/News/index",
+        "featuresType": 0,
+        "icon": "",
+        "parentId": "9a3a1c52-a211-4a4b-85b1-eabae8f707c3",
+        "sort": 0,
+        "subMenu": []
+      },
+      {
+        "featuresId": "94f3ed70-d485-44ba-b024-c3c4aead96ac",
+        "code": "pcApiTool",
+        "name": "API請求格式",
+        "url": "/PcApiTool",
+        "featuresType": 0,
+        "icon": "",
+        "parentId": "9a3a1c52-a211-4a4b-85b1-eabae8f707c3",
+        "sort": 1,
+        "subMenu": []
+      },
+      {
+        "featuresId": "8315701e-6138-4737-96e0-0029fda08422",
+        "code": "pcApiEncrypt",
+        "name": "API加解密工具",
+        "url": "/PcApiEncrypt",
+        "featuresType": 0,
+        "icon": "",
+        "parentId": "9a3a1c52-a211-4a4b-85b1-eabae8f707c3",
+        "sort": 2,
+        "subMenu": []
+      }
+    ]
+  }
+]
+
+
+module.exports = sideBar
